==> Tujiayi/SocChina_2023_Bouffalo/our_project_bl616_Electronic_Doorlocks/finger_identify/as608.c <==
#include <string.h>
#include "board.h"
#include "bflb_uart.h"
#include "as608.h"
#include "bflb_mtimer.h"

static void MYUSART_SendData(uint8_t data)
{
	bflb_uart_putchar(uartx, data);
}

uint8_t PS_HandShake(uint32_t *PS_Addr)
{
	uint16_t i;
	SendHead();
	SendAddr();
	MYUSART_SendData(0X01);
	MYUSART_SendData(0X00);
	MYUSART_SendData(0X00);	
	bflb_mtimer_delay_ms(200);
	if(flag == 1)//接收到数据
	{		
		// 判断是不是模块返回的应答包	
		if(uart1_rxbuf[0] == 0XEF && uart1_rxbuf[1] == 0X01 && uart1_rxbuf[6] == 0X07)
			{
				*PS_Addr = (uart1_rxbuf[2] << 24) + (uart1_rxbuf[3] << 16) + (uart1_rxbuf[4] << 8) + (uart1_rxbuf[5]);
				flag = 0; 
				return 0;
			}
		flag = 0;					
	}
	return 1;		
}
